# toy_payments_v2

./: Cargo.toml
src/: main.rs
src/csv/: reader.rs  writer.rs
src/processors/: mod.rs  txprocessor.rs
src/structs/: clients.rs  transaction.rs
