[package]
name = "toy_payments"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.36"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
